changed container to wrap container to prevent interference with bootstrap

--- a/Happy Paw/css/about-booking.css
+++ b/Happy Paw/css/about-booking.css
@@ -87,7 +87,7 @@ body {
 }
 
 /* flex box container - all content */
-.container {
+.wrap-container {
     width: 100%;
     height: 100vh;
     margin: 0;
@@ -390,6 +390,7 @@ textarea {
     border-radius: 0.5rem;
     outline: none;
     margin-bottom: 15px;
+    width: 100%;
 }
 
 /* placeholder text for booking form */
